fixed up a few things. current content broken on mobile, but i think that needs to be fixed by adding change function to onload of each page

--- a/style.css
+++ b/style.css
@@ -365,15 +365,15 @@ select.programSelect {
     display: inline-block;
     position: relative;
     padding: 5px;
-    width: 50%;
+    width: 60%;
     color: var(--fg-color);
     border: 1px solid var(--fg-color);
     background-color: var(--bg-color);
     font-family: "Courier New", monospace;
     font-size: 0.8em;
-    -moz-appearance: none;
+    /* -moz-appearance: none;
 	-webkit-appearance: none;
-    appearance: none;
+    appearance: none; */
     outline: none;
 }
 
@@ -382,6 +382,7 @@ select.programSelect:hover {
     border: 1px solid var(--bg-color);
     background-color: var(--fg-color);
 }
+
 
 .bio img {
     display: inline-block;
